Update file manage to support more upload method. Update list file api, add more struct.
